[tool.poetry]
name = "date-warehouse-microservice"
version = "0.1.0"
description = ""
authors = ["Jose Maximiliano Diaz Mendez <josemaximilianodiazmendez@gmail.com>"]
readme = "README.md"
packages = [{include = "date_warehouse_microservice"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}

[tool.pyright]
venvPath="."
venv=".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
